# peer-wire

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  a.txt
docs/: README.md  UserManual.md  architecture.md  design_refactor.md  protocol.md  roadmap.md  tasks.md  walkthrough.md
scripts/: build.sh  integration_test.py  run_daemon.sh  run_tracker.sh  tui.sh
src/common/: colors.h  logger.h  protocol.h  sha256.cpp  sha256.h  socket_utils.cpp  socket_utils.h
src/ipc/: ipc_server.cpp  ipc_server.h
src/node/: peer_daemon.cpp  peer_node.cpp  peer_node.h
src/tests/: test_main.cpp
src/tools/: ipc_client.cpp
src/tracker/: tracker_main.cpp
